--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* css 초기화 */
 *, *::before, *::after{
     box-sizing: border-box; 
 }
@@ -48,4 +49,38 @@ input, button, textarea, select{
 body, html{
     height: 100%; 
     scroll-behavior: smooth; 
+}
+
+/* main css */
+main {
+    max-width: 500px;
+    max-height: 500px;
+    margin: 0 auto;
+}
+
+.container {
+    width: 100%;
+    height: 80px;
+
+    color: white;
+    background-color: #40A578;
+    border: 3px solid #E6FF94;
+    border-radius: 10px;
+    text-align: center;
+    margin-top: 30px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    width: 50px;
+    height: 30px;
+    text-align: center;
+    background-color: #9DDE8B;
+    color: #fff;
+    border-radius: 10px;
+    border: none;
+    margin-left: 5px;
 }
